# youtok

./: .env.example  .gitignore  README.md  SPEC.md  pyproject.toml  youtok.spec
.github/workflows/: release.yml
alembic/: env.py
alembic/versions/: da0347b742ea_init_schema.py  fe318c5adc66_add_api_keys_and_settings_tables.py
assets/keys/: public_key.pem
scripts/: benchmark_models.py  fetch_vendor_bins.py  install-mac.sh  install-win.ps1  run-server.ps1  run-server.sh  run-worker.ps1  run-worker.sh  start_worker.bat  start_worker.sh  test-bulk.sh  test-channel.sh  test-crash-recovery.sh  test-worker.sh
sessions/: 01-foundation.md  02-pipeline.md  03-web-ui.md  04-worker.md  05-integration.md  06-polish.md  07-build-distribution.md  08-multi-provider.md
src/youtok/: __init__.py  cli.py  config.py
src/youtok/api/: deps.py  main.py  ws.py
src/youtok/api/routes/: activate.py  channels.py  drive.py  jobs.py  pages.py  settings.py  update.py
src/youtok/core/: cache.py  channel.py  compositor.py  downloader.py  errors.py  google_drive.py  pipeline.py  segmenter.py  slug.py  snapper.py  transcribe_engine.py  transcriber.py  updater.py
src/youtok/db/: base.py  crud.py  models.py
src/youtok/license/: keygen.py  machine_id.py  manager.py
src/youtok/llm/: batch.py  client.py  cost_tracker.py  fx.py  prompts.py  providers.py  schemas.py
src/youtok/llm/adapters/: __init__.py  anthropic_adapter.py  base.py  gemini_adapter.py  openai_adapter.py
src/youtok/queue/: __init__.py  huey_app.py  tasks.py
src/youtok/web/: __init__.py
src/youtok/web/templates/: activate.html  base.html  dashboard.html  history.html  job_detail.html  new_job.html  settings.html
src/youtok/web/templates/partials/: channel_preview.html  clip_grid.html  job_table.html
