[project]
name = "youtok"
version = "0.1.0"
description = "YouTube → 9:16 short-form clip cutter"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "huey>=2.5",
    "anthropic>=0.39",
    "yt-dlp>=2024.10.7",
    "ffmpeg-python>=0.2",
    "scenedetect[opencv]>=0.6",
    "pysubs2>=1.7",
    "nltk>=3.9",
    "loguru>=0.7",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "cryptography>=43",
    "websockets>=13",
    "click>=8.1",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.5",
    "torchaudio>=2.5",
    "faster-whisper>=1.0.3",
    "whisperx>=3.1",
]
cpu = [
    "torch>=2.5",
    "torchaudio>=2.5",
    "faster-whisper>=1.0.3",
    "whisperx>=3.1",
]
dev = [
    "pytest>=8",
    "ruff>=0.7",
    "pyright>=1.1",
]

[project.scripts]
youtok = "youtok.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
