[project]
name = "youtok"
version = "0.1.0"
description = "YouTube → 9:16 short-form clip cutter"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "sqlalchemy>=2.0",
    "alembic>=1.13",
    "huey>=2.5",
    "anthropic>=0.39",
    "litellm>=1.52",
    "yt-dlp>=2024.10.7",
    "ffmpeg-python>=0.2",
    "scenedetect[opencv]>=0.6",
    "pysubs2>=1.7",
    "nltk>=3.9",
    "loguru>=0.7",
    "jinja2>=3.1",
    "python-multipart>=0.0.12",
    "httpx>=0.27",
    "cryptography>=43",
    "websockets>=13",
    "click>=8.1",
    "google-api-python-client>=2.195.0",
    "google-auth-oauthlib>=1.3.1",
    "google-auth-httplib2>=0.3.1",
    "pywebview>=6.0",
    "faster-whisper>=1.0.3",
    # ctranslate2 4.7.x segfaults on Windows when WhisperModel loads.
    # 4.6.0 needs pkg_resources, which setuptools 81+ removed.
    "ctranslate2>=4.5,<4.7",
    "setuptools<81",
    # onnxruntime 1.21+ Win11 wheel: DLL initialization routine fails.
    # 1.20.1 works fine for Silero VAD.
    "onnxruntime<1.21",
]

[project.optional-dependencies]
gpu = [
    "torch>=2.5",
    "torchaudio>=2.5",
    "faster-whisper>=1.0.3",
    "whisperx>=3.1",
]
cpu = [
    "torch>=2.5",
    "torchaudio>=2.5",
    "faster-whisper>=1.0.3",
    "whisperx>=3.1",
    "mlx-whisper>=0.4 ; sys_platform == 'darwin' and platform_machine == 'arm64'",
]
dev = [
    "pytest>=8",
    "ruff>=0.7",
    "pyright>=1.1",
]

[project.scripts]
youtok = "youtok.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
